add_executable(array_domain array_domain.cpp)
add_executable(basic_domain basic_domain.cpp)
add_executable(uint_assignment_iterator uint_assignment_iterator.cpp)
add_executable(process process.cpp)
add_executable(variable variable.cpp)
add_executable(real_assignment real_assignment.cpp)

add_test(array_domain array_domain)
add_test(basic_domain basic_domain)
add_test(uint_assignment_iterator uint_assignment_iterator)
add_test(process process)
add_test(variable variable)
add_test(vector_assignment vector_assignment)
