add_executable(array_domain array_domain.cpp)
add_executable(basic_assignment basic_assignment.cpp)
add_executable(domain domain.cpp)
add_executable(hybrid_assignment hybrid_assignment.cpp)
add_executable(hybrid_domain hybrid_domain.cpp)
add_executable(sequence sequence.cpp)
add_executable(uint_assignment_iterator uint_assignment_iterator.cpp)
add_executable(var var.cpp)
add_executable(vec vec.cpp)

add_test(array_domain array_domain)
add_test(basic_assignment basic_assignment)
add_test(domain domain)
add_test(hybrid_assignment hybrid_assignment)
add_test(hybrid_domain hybrid_domain)
add_test(sequence sequence)
add_test(uint_assignment_iterator uint_assignment_iterator)
add_test(var var)
add_test(vec vec)
