subdirs(experimental random)

#add_executable(array_factor array_factor.cpp)
add_executable(canonical_array canonical_array.cpp)
add_executable(canonical_table canonical_table.cpp)
add_executable(canonical_gaussian canonical_gaussian.cpp)
add_executable(commutative_semiring commutative_semiring.cpp)
add_executable(moment_gaussian moment_gaussian.cpp)
add_executable(probability_array probability_array.cpp)
add_executable(probability_table probability_table.cpp)
add_executable(softmax softmax.cpp)
#add_executable(factor_traits traits.cpp)

#add_test(array_factor array_factor)
add_test(canonical_array canonical_array)
add_test(canonical_table canonical_table)
add_test(canonical_gaussian canonical_gaussian)
add_test(commutative_semiring commutative_semiring)
add_test(moment_gaussian moment_gaussian)
add_test(probability_array probability_array)
add_test(probability_table probability_table)
#add_test(factor_traits factor_traits)
#add_test(softmax softmax)
