subdirs(random)

add_executable(probability_table probability_table.cpp)
add_executable(logarithmic_table logarithmic_table.cpp)

add_executable(probability_vector probability_vector.cpp)
add_executable(logarithmic_vector logarithmic_vector.cpp)

add_executable(probability_matrix probability_matrix.cpp)
add_executable(logarithmic_matrix logarithmic_matrix.cpp)

add_executable(moment_gaussian moment_gaussian.cpp)
add_executable(canonical_gaussian canonical_gaussian.cpp)

add_executable(softmax softmax.cpp)
add_executable(commutative_semiring commutative_semiring.cpp)

add_test(probability_table probability_table)
add_test(logarithmic_table logarithmic_table)

add_test(probability_vector probability_vector)
add_test(logarithmic_vector logarithmic_vector)

add_test(probability_matrix probability_matrix)
add_test(logarithmic_matrix logarithmic_matrix)

add_test(moment_gaussian moment_gaussian)
add_test(canonical_gaussian canonical_gaussian)

add_test(softmax softmax)
add_test(commutative_semiring commutative_semiring)
