subdirs(algorithm)
subdirs(special)

add_executable(bayesian_network bayesian_network_test.cpp)
add_executable(bayesian_network_typed bayesian_network_typed.cpp)
add_executable(cluster_graph cluster_graph_test.cpp)
add_executable(cluster_graph_typed cluster_graph_typed.cpp)
add_executable(factor_graph factor_graph_test.cpp)
#add_executable(region_graph region_graph.cpp)
add_executable(markov_network markov_network_test.cpp)
add_executable(markov_network_typed markov_network_typed.cpp)

add_test(bayesian_network bayesian_network)
add_test(bayesian_network_typed bayesian_network_typed)
add_test(cluster_graph cluster_graph)
add_test(cluster_graph_typed cluster_graph_typed)
add_test(factor_graph factor_graph)
#add_test(region_graph region_graph)
add_test(markov_network markov_network)
add_test(markov_network_typed markov_network_typed)
