subdirs(algorithm)
subdirs(special)

add_executable(directed_graph directed_graph_test.cpp)
add_executable(bipartite_graph bipartite_graph_test.cpp)
add_executable(undirected_graph undirected_graph_test.cpp)
#add_executable(region_graph region_graph.cpp)
add_executable(markov_network markov_network_test.cpp)
add_executable(markov_network_typed markov_network_typed.cpp)

add_test(directed_graph directed_graph)
add_test(bipartite_graph bipartite_graph)
add_test(undirected_graph undirected_graph)
#add_test(region_graph region_graph)
add_test(markov_network markov_network)
add_test(markov_network_typed markov_network_typed)
