add_executable(alternating_generator alternating_generator.cpp)
add_executable(diagonal_table_generator diagonal_table_generator.cpp)
add_executable(moment_gaussian_generator moment_gaussian_generator.cpp)
add_executable(uniform_table_generator uniform_table_generator.cpp)

add_test(alternating_generator alternating_generator)
add_test(diagonal_table_generator diagonal_table_generator)
add_test(moment_gaussian_generator moment_gaussian_generator)
add_test(uniform_table_generator uniform_table_generator)
