add_executable(categorical_distribution categorical_distribution.cpp)
add_executable(bivariate_categorical_distribution bivariate_categorical_distribution.cpp)
add_executable(multivariate_categorical_distribution multivariate_categorical_distribution.cpp)

add_executable(multinomial_distribution multinomial_distribution.cpp)
add_executable(multivariate_normal_distribution multivariate_normal_distribution.cpp)
add_executable(softmax_distribution softmax_distribution.cpp)

add_test(categorical_distribution categorical_distribution)
add_test(bivariate_categorical_distribution bivariate_categorical_distribution)
add_test(multivariate_categorical_distribution multivariate_categorical_distribution)

add_test(multinomial_distribution multinomial_distribution)
add_test(multivariate_normal_distribution multivariate_normal_distribution)
add_test(softmax_distribution softmax_distribution)
