add_executable(categorical_distribution categorical_distribution_test.cpp)
add_executable(bivariate_categorical_distribution bivariate_categorical_distribution_test.cpp)
add_executable(multivariate_categorical_distribution multivariate_categorical_distribution_test.cpp)
add_executable(multivariate_normal_distribution multivariate_normal_distribution_test.cpp)

add_test(categorical_distribution categorical_distribution)
add_test(bivariate_categorical_distribution bivariate_categorical_distribution)
add_test(multivariate_categorical_distribution multivariate_categorical_distribution)
add_test(multivariate_normal_distribution multivariate_normal_distribution)
